# ros_mav_swarm_simulator

./: .gitignore  README.md
src/hector/: README.md
src/hector/hector_quadrotor/hector_quadrotor_controllers/src/: attitude_controller.cpp
src/hector/hector_quadrotor/hector_quadrotor_description/meshes/quadrotor/: quadrotor_base.dae
src/hector/hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_base.urdf.xacro
src/hector/hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
src/mav_controller/: CMakeLists.txt  package.xml
src/mav_controller/launch/: 10mavs.launch  1mavs.launch  2mavs.launch  3mavs.launch  4mavs.launch  9mavs.launch  dumbmav.launch  experiment.launch  followcases.launch  follower.launch  localization_experiment.launch  testcases.launch
src/mav_controller/motions/: backandforth.txt  circles.txt  cross.txt  loc_experiment.txt  sweep.txt
src/mav_controller/src/: .kdev_include_paths  behaviour.cpp
src/mav_controller/src/functions/: arrayfunctions.c  coordinateconversions.c
src/mav_controller/src/loggers/: logger.cpp  logger.h  scheduler.cpp
src/mav_controller/src/trackers/: BTsimulator.cpp  BTsimulator.h  auxiliary.h  gazebotracker.cpp  gazebotracker.h  relativetracker.cpp  relativetracker.h  statetracker.cpp  statetracker.h
src/mav_controller/worlds/: fast.launch  fast.world  normal.launch  normal.world
